<?xml version="1.0" encoding="utf-8"?>
<com.amar.library.ui.StickyScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/create_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/prompt_bold"
                android:gravity="top"
                android:text="@string/create_new_"
                android:textColor="@color/green_2"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.351"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/your_new"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/prompt_light"
                android:text="@string/your_new_pa"
                android:textColor="@color/textin"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.457"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_new" />

            <ImageButton
                android:id="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/background"
                app:layout_constraintEnd_toStartOf="@+id/create_new"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_arrow"
                tools:ignore="VectorDrawableCompat" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/prompt_light"
            android:gravity="top"
            android:scrollbarSize="6dp"
            android:text="@string/password"
            android:textColor="@color/textout"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Topic" />

        <EditText
            android:id="@+id/hintPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/prompt_light"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:paddingLeft="30dp"
            android:textColor="@color/textin"
            android:textColorHint="@color/textin"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/prompt_light"
            android:gravity="top"
            android:scrollbarSize="6dp"
            android:text="@string/confirm_pass"
            android:textColor="@color/textout"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.215"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hintPassword" />

        <EditText
            android:id="@+id/hintConfirm_Password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/prompt_light"
            android:gravity="center_vertical"
            android:hint="@string/confirm_pass"
            android:inputType="textPersonName"
            android:paddingLeft="30dp"
            android:textColor="@color/textin"
            android:textColorHint="@color/textin"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

        <Button
            android:id="@+id/Change_Pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/button"
            android:fontFamily="@font/prompt_light"
            android:gravity="center"
            android:text="Change Password"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:backgroundTint="@drawable/all_change_button_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hintConfirm_Password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.amar.library.ui.StickyScrollView>