<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ResetPassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/prompt_bold"
        android:gravity="top"
        android:text="@string/reset_pass"
        android:textColor="@color/green_2"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/we_have_sent"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/prompt_light"
        android:text="@string/we_have_sent"
        android:textColor="@color/textin"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ResetPassText" />

    <TextView
        android:id="@+id/please_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/prompt_light"
        android:gravity="top"
        android:scrollbarSize="6dp"
        android:text="@string/please_enter"
        android:textColor="@color/textout"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/we_have_sent" />

    <Button
        android:id="@+id/Done"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/button"
        android:fontFamily="@font/prompt_light"
        android:gravity="center"
        android:text="Done"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:backgroundTint="@drawable/all_change_button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <EditText
        android:id="@+id/Number1"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_code"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textColor="@color/textin"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/please_enter" />

    <EditText
        android:id="@+id/Number2"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_code"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textColor="@color/textin"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/Number1"
        app:layout_constraintTop_toBottomOf="@+id/please_enter" />

    <EditText
        android:id="@+id/Number3"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_code"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textColor="@color/textin"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/Number2"
        app:layout_constraintTop_toBottomOf="@+id/please_enter" />

    <EditText
        android:id="@+id/Number4"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_code"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textColor="@color/textin"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/Number3"
        app:layout_constraintTop_toBottomOf="@+id/please_enter" />

    <EditText
        android:id="@+id/Number5"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_code"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textColor="@color/textin"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/Number4"
        app:layout_constraintTop_toBottomOf="@+id/please_enter" />

    <EditText
        android:id="@+id/Number6"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_code"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textColor="@color/textin"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/Number5"
        app:layout_constraintTop_toBottomOf="@+id/please_enter" />

    <View
        android:id="@+id/divider"
        android:layout_width="329dp"
        android:layout_height="3dp"
        android:layout_marginTop="90dp"
        android:background="@color/green_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/please_enter" />

    <ImageButton
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/background"
        app:layout_constraintEnd_toStartOf="@+id/ResetPassText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_arrow"
        tools:ignore="VectorDrawableCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>